FEATRUE Fuck-the-LeetCode-二.md

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: CK's blog
-subtitle:
+subtitle: 写代码这么好玩的事，居然还能挣钱
 description: to see the greater world
 author: CK
 language: Chinese
